--- a/src/makefile
+++ b/src/makefile
@@ -1,15 +1,19 @@
 CFLAGS = -g
+LINKS = -lpthread
 
 all: GameBoy clean
 
 clean:
 	rm *.o
 
-GameBoy: cpu.o main.o
-	gcc -o $(CFLAGS) Z80.o main.o
+GameBoy: cpu.o main.o memory.o
+	gcc -o GameBoy $(CFLAGS) cpu.o memory.o main.o $(LINKS)
 
-cpu.o: Z80.c memory.h cpu.h
-	gcc -c $(CFLAGS) Z80.c
+cpu.o: cpu.c memory.h cpu.h
+	gcc -c $(CFLAGS) cpu.c
 
-main.o:
+memory.o: memory.c
+	gcc -c $(CFLAGS) memory.c
+
+main.o: main.c
 	gcc -c $(CFLAGS) main.c
