Fixed opcodes relating to jump instructions and the state of the program counter, as well as actually accessing immediate addresses for instructions using them rather than just passing program counter values

--- a/src/makefile
+++ b/src/makefile
@@ -1,13 +1,13 @@
 CFLAGS = -g
-LINKS = -lpthread
+LINKS = -lpthread -lSDL -lX11 
 
 all: GameBoy clean
 
 clean:
 	rm *.o
 
-GameBoy: cpu.o main.o memory.o
-	gcc -o GameBoy $(CFLAGS) cpu.o memory.o main.o $(LINKS)
+GameBoy: cpu.o main.o memory.o graphics.o IO.o
+	gcc -o GameBoy $(CFLAGS) cpu.o memory.o graphics.o IO.o main.o $(LINKS)
 
 cpu.o: cpu.c memory.h cpu.h
 	gcc -c $(CFLAGS) cpu.c
@@ -17,3 +17,9 @@ memory.o: memory.c
 
 main.o: main.c
 	gcc -c $(CFLAGS) main.c
+
+graphics.o: graphics.c
+	gcc -c $(CFLAGS) graphics.c
+
+IO.o: IO.c
+	gcc -c $(CFLAGS) IO.c
