Changed makefile to use clang compiler, ommited opcodes from cpu into own opcodes file. Fixed PC location after jump instructions so it now points to the correct location in memory after performing a jump

--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,6 @@
-CFLAGS = -g
+CFLAGS = -g -W -Wall
 LINKS = -lpthread -lSDL -lX11 
+COMPILER = clang
 
 all: GameBoy clean
 
@@ -7,19 +8,19 @@ clean:
 	rm *.o
 
 GameBoy: cpu.o main.o memory.o graphics.o IO.o
-	gcc -o GameBoy $(CFLAGS) cpu.o memory.o graphics.o IO.o main.o $(LINKS)
+	$(COMPILER) -o GameBoy $(CFLAGS) cpu.o memory.o graphics.o IO.o main.o $(LINKS)
 
 cpu.o: cpu.c memory.h cpu.h
-	gcc -c $(CFLAGS) cpu.c
+	$(COMPILER) -c $(CFLAGS) cpu.c
 
 memory.o: memory.c
-	gcc -c $(CFLAGS) memory.c
+	$(COMPILER) -c $(CFLAGS) memory.c
 
 main.o: main.c
-	gcc -c $(CFLAGS) main.c
+	$(COMPILER) -c $(CFLAGS) main.c
 
 graphics.o: graphics.c
-	gcc -c $(CFLAGS) graphics.c
+	$(COMPILER) -c $(CFLAGS) graphics.c
 
 IO.o: IO.c
-	gcc -c $(CFLAGS) IO.c
+	$(COMPILER) -c $(CFLAGS) IO.c
