--- a/src/SConstruct
+++ b/src/SConstruct
@@ -11,9 +11,9 @@ allObjects = mainObject + coreObjects
 env.Program('gb',allObjects)
 
 #Test environment
-coreTestEnv = Environment(CC = 'clang')
-cpuTestObjects = env.Object( Glob('core/memory.c')) + env.Object( Glob('core/IO.c')) + env.Object( Glob('core/timers.c'))
-coreTestObject = env.Object( Glob('core/tests/cpuTests.c'))
-allObjects = cpuTestObjects + coreTestObject
+#coreTestEnv = Environment(CC = 'clang')
+#cpuTestObjects = env.Object( Glob('core/memory.c')) + env.Object( Glob('core/IO.c')) + env.Object( Glob('core/timers.c'))
+#coreTestObject = env.Object( Glob('core/tests/cpuTests.c'))
+#allObjects = cpuTestObjects + coreTestObject
 
-coreTestEnv.Program('cpuTests', allObjects)
+#coreTestEnv.Program('cpuTests', allObjects)
