Placed all file reading/writing routines into seperate modules

--- a/src/SConstruct
+++ b/src/SConstruct
@@ -5,9 +5,10 @@ env = Environment(CC = 'gcc',
 env.Append(LIBS = ['SDL', 'X11'])
 
 coreObjects =env.Object( Glob('core/*.c'))
-nonCoreObjects = env.Object( Glob('shared_libs/SDL/*'))
+nonCoreObjects = env.Object( Glob('shared_libs/SDL/*.c'))
+standardObjects = env.Object( Glob('platforms/standard/files.c'))
 mainObject = env.Object( Glob('platforms/standard/main.c'))
-allObjects = mainObject + coreObjects + nonCoreObjects
+allObjects = mainObject + coreObjects + nonCoreObjects + standardObjects
 
 env.Program('gb_emu',allObjects)
 
