Moved framerate adjusting outside of graphics and into its own module. All SDL related code is now in their own self contained area. Can easily introduce a new framework with the core in the future such as QT if needed.

--- a/src/SConstruct
+++ b/src/SConstruct
@@ -1,6 +1,6 @@
 #Release environment
 env = Environment(CC = 'gcc', 
-                  CCFLAGS = '--std=c99 -O3 -W -Wall')
+                  CCFLAGS = '--std=c99 -g -W -Wall')
 
 env.Append(LIBS = ['SDL', 'X11'])
 
