--- a/src/SConstruct
+++ b/src/SConstruct
@@ -1,21 +1,22 @@
 #Release environment
-env = Environment(CC = 'clang', 
-                  CCFLAGS = '-g -W -Wall')
+env = Environment(CC = 'gcc', 
+                  CCFLAGS = '-O3 -fomit-frame-pointer -std=c99 -W -Wall -Wextra')
 
 #gcc --std=c99
 env.Append(LIBS = ['SDL', 'X11'])
+env.Append(LINKFLAGS = '-pg')
 
 coreObjects =env.Object( Glob('core/*.c'))
 mmuObjects = env.Object( Glob('core/mmu/*.c'))
 nonCoreObjects = env.Object( Glob('shared_libs/SDL/*.c'))
 standardObjects = env.Object( Glob('platforms/standard/*.c'))
-soundObjects = env.Object( Glob('core/sound/*.cpp'))
-soundObjects2 = env.Object( Glob('core/sound/blaarg_sound/*.cpp'))
-apuObjects = env.Object( Glob('core/sound/blaarg_sound/gb_apu/*.cpp'))
-boostObjects = env.Object( Glob('core/sound/blaarg_sound/boost/*.cpp'))
+soundObjects = env.Object( Glob('shared_libs/SDL/*.cpp'))
+soundObjects2 = env.Object( Glob('shared_libs/SDL/audio/*.cpp'))
+#apuObjects = env.Object( Glob('core/sound/blaarg_sound/gb_apu/*.cpp'))
+#boostObjects = env.Object( Glob('core/sound/blaarg_sound/boost/*.cpp'))
 
 allObjects = coreObjects + mmuObjects + nonCoreObjects + standardObjects
-allObjects = allObjects + soundObjects + soundObjects2 + apuObjects + boostObjects
+allObjects = allObjects + soundObjects + soundObjects2# + apuObjects + boostObjects
 
 env.Program('gb_emu',allObjects)
 
