--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
 
 install:
     - sudo apt-get install scons
+    - sudo apt-get install clang
     - sudo apt-get install libsdl1.2-dev
     - sudo apt-get install libsdl-net1.2-dev
 
