--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,31 @@
-#Linux build
+# Unix builds
 
-install:
-    - sudo apt-get install scons
-    - sudo apt-get install clang
-    - sudo apt-get install libsdl1.2-dev
-    - sudo apt-get install libsdl-net1.2-dev
+os:
+    - linux
+    - osx
+
+env:
+    - BUILD=native CC=clang MODE=release
+    - BUILD=native CC=clang MODE=debug
+    - BUILD=native CC=gcc MODE=release
+    - BUILD=native CC=gcc MODE=debug
+
+
+install:    
+     # Native OSX build setup
+    - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$BUILD" == "native" ]; then sudo apt-get install scons; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$BUILD" == "native" ]; then sudo apt-get install clang; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$BUILD" == "native" ]; then sudo apt-get install libsdl1.2-dev; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$BUILD" == "native" ]; then sudo apt-get install libsdl-net1.2-dev; fi
+    
+    # Native Linux Build setup
+    - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ "$BUILD" == "native" ]; then brew install scons; fi
+    - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ "$BUILD" == "native" ]; then brew install sdl; fi
+    - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ "$BUILD" == "native" ]; then brew install sdl2; fi
+    - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ "$BUILD" == "native" ]; then brew install sdl_net; fi
+    
 
 script:
-    - cd build/Unix
-    - scons
+    # Native builds
+    - if [ "$BUILD" == "native" ]; then cd build/Unix; fi
+    - if [ "$BUILD" == "native" ]; then scons cc=$CC mode=$MODE; fi
