--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+*.h linguist-language=C
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
